# rust_api_example

./: Cargo.toml
migrations/2020-01-22-013058_setup/: up.sql
src/: database.rs  error.rs  main.rs
src/model/: user.rs
src/route/: user.rs
src/service/: user.rs
