[package]
name = "rust-api"
version = "0.1.0"
authors = ["Graham <graham.gibbons@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "async" }
