[package]
name = "rust_api_example"
version = "0.1.0"
authors = ["Graham <graham.gibbons@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "async" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "async" }
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
serde = "1.0.104" 
serde_derive = "1.0.104" 
